# Hand-Rekognition-CV

./: README.md  detector.py  pyproject.toml  requirements.txt  teste.py
