[project]
name = "media"
version = "0.1.0"
description = ""
authors = [
    {name = "Isabelle Vimercati",email = "103614557+BelleVimercati@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mediapipe (>=0.10.21,<0.11.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)"
]

[tool.poetry]
packages = [{include = "mediapipe", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
